--- a/register.html
+++ b/register.html
@@ -222,7 +222,7 @@
         <li class=" my-2"><a class=" hover:text-clr-primary ease-in duration-200" href="#timeline">Timeline</a></li>
         <li class=" my-2"><a class=" hover:text-clr-primary ease-in duration-200" href="">Overview</a></li>
         <li class=" my-2"><a class=" hover:text-clr-primary ease-in duration-200" href="#help">FAQs</a></li>
-        <li class=" my-2"><a class=" hover:text-clr-primary ease-in duration-200" href="contact.html">Register</a></li>
+        <li class=" my-2"><a class=" hover:text-clr-primary ease-in duration-200" href="register.html">Register</a></li>
       </ul>
       <div class="h-1/4 my-1">
         <h6 class="text-clr-secondary">Follow Us <span class="text-white">
